--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <favicon rel="icon" src="/favicon.png" type="image/png" />
 </head>
 <body>
-    Page d'acceuil de Tim Haller
+    Page d'acceuil de John Ceena
 </body>
 </html>
