--- a/exercices.html
+++ b/exercices.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Exercices</title>
+    <link rel="icon" type="image/jpg" src="./IMG_0740.jpeg"/>
   </head>
   <body></body>
 </html>
