Worked on some stuff

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Page d'acceuil</title>
-    <favicon rel="icon" src="/favicon.png" type="image/png" />
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/icon.png"/>
   </head>
   <body>
-    Page d'acceuil de John Ceena Tim est super beau
+      <div class="card">
+          <div class="card-gradient"></div>
+          <div class="card-letters"></div>
+      </div>
   </body>
+  <script src="main.js"></script>
 </html>
