Worked on some stuff

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="icon" type="image/png" href="images/icon.png"/>
   </head>
   <body>
-      <div class="card">
-          <div class="card-gradient"></div>
-          <div class="card-letters"></div>
+      <div class="card" id="card">
+<!--          <div class="card-gradient"></div>-->
+          <div class="card-letters" id="card-letters"></div>
       </div>
+      <audio autoplay loop>
+          <source src="assets/clock.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+      </audio>
+      <script src="main.js"></script>
   </body>
-  <script src="main.js"></script>
+
 </html>
