--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   </head>
   <body>
       <div class="card" id="card">
-<!--          <div class="card-gradient"></div>-->
           <div class="card-letters" id="card-letters"></div>
       </div>
-      <audio autoplay loop>
-          <source src="assets/clock.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-      </audio>
+      <button class="button" id="button" onclick="mute()">
+          <div id="audio-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16"><path fill="white" d="M7.563 2.069A.75.75 0 0 1 8 2.75v10.5a.751.751 0 0 1-1.238.57L3.472 11H1.75A1.75 1.75 0 0 1 0 9.25v-2.5C0 5.784.784 5 1.75 5h1.723l3.289-2.82a.75.75 0 0 1 .801-.111ZM6.5 4.38L4.238 6.319a.748.748 0 0 1-.488.181h-2a.25.25 0 0 0-.25.25v2.5c0 .138.112.25.25.25h2c.179 0 .352.064.488.18L6.5 11.62Zm6.096-2.038a.75.75 0 0 1 1.06 0a8 8 0 0 1 0 11.314a.751.751 0 0 1-1.042-.018a.751.751 0 0 1-.018-1.042a6.5 6.5 0 0 0 0-9.193a.75.75 0 0 1 0-1.06Zm-1.06 2.121l-.001.001a5 5 0 0 1 0 7.07a.749.749 0 0 1-1.275-.326a.749.749 0 0 1 .215-.734a3.5 3.5 0 0 0 0-4.95a.75.75 0 1 1 1.061-1.061Z"/></svg>
+          </div>
+      </button>
+<!--      <audio autoplay loop id="sound-effect">-->
+<!--          <source src="assets/clock.mp3" type="audio/mpeg">-->
+<!--          Your browser does not support the audio element.-->
+<!--      </audio>-->
       <script src="main.js"></script>
   </body>
 
