--- a/exercices.html
+++ b/exercices.html
@@ -13,7 +13,12 @@
         user clicks on the button, the "plus" sign is replaced with a "minus"
         sign.
       </p>
-      <button class="accordion">Section 1</button>
+      <button class="accordion">
+        <span>Section 1</span>
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="currentColor" d="M4.7 10c-.2 0-.4-.1-.5-.2c-.3-.3-.3-.8 0-1.1L6.9 6L4.2 3.3c-.3-.3-.3-.8 0-1.1c.3-.3.8-.3 1.1 0l3.3 3.2c.3.3.3.8 0 1.1L5.3 9.7c-.2.2-.4.3-.6.3Z"/></svg>
+        </div>
+      </button>
       <div class="panel">
         <ul class="links">
           <li>
@@ -51,15 +56,14 @@
         </p>
       </div>
     </div>
-
     <script>
-      var acc = document.getElementsByClassName("accordion");
-      var i;
+      let acc = document.getElementsByClassName("accordion");
+      let i;
 
       for (i = 0; i < acc.length; i++) {
         acc[i].addEventListener("click", function () {
           this.classList.toggle("active");
-          var panel = this.nextElementSibling;
+          let panel = this.nextElementSibling;
           if (panel.style.maxHeight) {
             panel.style.maxHeight = null;
           } else {
