--- a/exercices.html
+++ b/exercices.html
@@ -1,86 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="exercices.css" />
-    <link rel="icon" type="image/png" href="images/icon.png" />
-  </head>
-  <body>
-    <div class="navbar">
-      <h2>Accordion with symbols</h2>
-      <p>
-        In this example we have added a "plus" sign to each button. When the
-        user clicks on the button, the "plus" sign is replaced with a "minus"
-        sign.
-      </p>
-      <button class="accordion">
-        <span>Section 1</span>
-        <div class="icon">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="12"
-            height="12"
-            viewBox="0 0 12 12"
-          >
-            <path
-              fill="currentColor"
-              d="M4.7 10c-.2 0-.4-.1-.5-.2c-.3-.3-.3-.8 0-1.1L6.9 6L4.2 3.3c-.3-.3-.3-.8 0-1.1c.3-.3.8-.3 1.1 0l3.3 3.2c.3.3.3.8 0 1.1L5.3 9.7c-.2.2-.4.3-.6.3Z"
-            />
-          </svg>
-        </div>
-      </button>
-      <div class="panel">
-        <ul class="links">
-          <li>
-            <a href="exercices/m01/ex1/">Exercice 1</a>
-          </li>
-          <li>
-            <a href="exercices/m01/ex2/">Exercice 2</a>
-          </li>
-          <li>
-            <a href="exercices/m01/ex3/">Exercice 3</a>
-          </li>
-          <li>
-            <a href="exercices/m01/ex4/">Exercice 4</a>
-          </li>
-        </ul>
-      </div>
-
-      <button class="accordion">Section 2</button>
-      <div class="panel">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-      </div>
-
-      <button class="accordion">Section 3</button>
-      <div class="panel">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="exercices.css" />
+  <link rel="icon" type="image/png" href="images/icon.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap" rel="stylesheet">
+  <title>Fake Terminal</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="terminal">
+    <div id="navbar">
+      <a class="button red" href="/">
+        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+      </a>
+    </div>
+    <div id="terminal-text">
+      <div id="output"></div>
+      <div id="input-container">
+        <span>timhaller@ocinfo</span>
+        <input id="input" type="text" autocomplete="off" />
       </div>
     </div>
-    <script>
-      let acc = document.getElementsByClassName("accordion");
-      let i;
-
-      for (i = 0; i < acc.length; i++) {
-        acc[i].addEventListener("click", function () {
-          this.classList.toggle("active");
-          let panel = this.nextElementSibling;
-          if (panel.style.maxHeight) {
-            panel.style.maxHeight = null;
-          } else {
-            panel.style.maxHeight = panel.scrollHeight + "px";
-          }
-        });
-      }
-    </script>
-  </body>
+  </div>
+  <script src="exercices.js"></script>
+</body>
 </html>
