--- a/exercices.html
+++ b/exercices.html
@@ -34,6 +34,7 @@
         <div id="output"></div>
         <div id="input-container">
           <span>timhaller@ocinfo</span>
+          &NonBreakingSpace;<span id="path">~</span>&NonBreakingSpace;
           <input id="input" type="text" autocomplete="off" />
         </div>
       </div>
