Added following functions : ls cd and open

--- a/exercices.html
+++ b/exercices.html
@@ -13,11 +13,13 @@
     />
     <title>Fake Terminal</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="deleted.js"></script>
+    <script src="exercices.js"></script>
   </head>
   <body>
     <div id="terminal">
       <div id="navbar">
-        <a class="button red" href="/">
+        <a class="button red" href="index.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             height="1em"
@@ -39,6 +41,5 @@
         </div>
       </div>
     </div>
-    <script src="exercices.js"></script>
   </body>
 </html>
