--- a/exercices/m04/ex2/m04_ex2_d.html
+++ b/exercices/m04/ex2/m04_ex2_d.html
@@ -53,7 +53,7 @@
         position >= 21
           ? alert("Vous avez gagné en " + (numeroTour - 1) + " tours.")
           : alert("Vous avez perdu.");
-        alert("Vous avez gagné en " + (numeroTour - 1) + " tours.");
+        // alert("Vous avez gagné en " + (numeroTour - 1) + " tours.");
       }
 
       // appel de la fonction jeu()
