--- a/exercices/m05/ex6/index.html
+++ b/exercices/m05/ex6/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Title</title>
+    <script src="/utils/basicFunctions.js"></script>
     <script src="main.js"></script>
   </head>
   <body></body>
