Unified all the indexes

--- a/exercices/m02/ex1/index.html
+++ b/exercices/m02/ex1/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>Introduction to JavaScript</title>
+    <title>Module 2, Exercice 1</title>
+    <link rel="icon" type="image/png" href="../../../images/icon.png" />
+    <script src="../../../utils/basicFunctions.js"></script>
     <script src="main.js"></script>
-    s
   </head>
   <body></body>
 </html>
