--- a/exercices/m02/ex5/index.html
+++ b/exercices/m02/ex5/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Functions</title>
-    <script src="main.js"></script>
-  </head>
-  <body></body>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <title>Module 2, Exercice 5</title>
+  <link rel="icon" type="image/png" href="../../../images/icon.png" />
+  <script src="../../../utils/basicFunctions.js"></script>
+  <script src="main.js"></script>
+</head>
+<body></body>
 </html>
