--- a/exercices.html
+++ b/exercices.html
@@ -17,27 +17,44 @@
     <script src="exercices.js"></script>
   </head>
   <body>
-    <div id="terminal">
-      <div id="navbar">
-        <a class="button red" href="index.html">
-          <svg
+  <div class="tooltip">
+    <svg
             xmlns="http://www.w3.org/2000/svg"
-            height="1em"
-            viewBox="0 0 384 512"
-          >
-            <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-            <path
-              d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
-            />
-          </svg>
-        </a>
-      </div>
-      <div id="terminal-text">
-        <div id="output"></div>
-        <div id="input-container">
-          <span>timhaller@ocinfo</span>
-          &NonBreakingSpace;<span id="path">~</span>&NonBreakingSpace;
-          <input id="input" type="text" autocomplete="off" />
+            height="16"
+            width="16"
+            viewBox="0 0 512 512"
+    >
+      <!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+      <path
+              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
+      />
+    </svg>
+    <p>Bloqué? essayez la commande "help"</p>
+    <div class="statusbar" id="statusbar"></div>
+  </div>
+    <div class="wrapper">
+      <div id="terminal">
+        <div id="navbar">
+          <a class="button red" href="index.html">
+            <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="1em"
+                    viewBox="0 0 384 512"
+            >
+              <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <path
+                      d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
+              />
+            </svg>
+          </a>
+        </div>
+        <div id="terminal-text">
+          <div id="output"></div>
+          <div id="input-container">
+            <span>timhaller@ocinfo</span>
+            &NonBreakingSpace;<span id="path">~</span>&NonBreakingSpace;
+            <input id="input" type="text" autocomplete="off" />
+          </div>
         </div>
       </div>
     </div>
