--- a/exercices.html
+++ b/exercices.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap"
       rel="stylesheet"
     />
-    <title>Fake Terminal</title>
+    <title>Exercices</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="deleted.js"></script>
     <script src="exercices.js"></script>
